<resources>
    <string name="app_name">PhotographieProject</string>
    <string name="exception_network">Vérifier votre connexion internet</string>
    <string name="exception_firestore">Impossible de récupérer les informations de la base de données</string>
    <string name="exception_user">Utilisateur introuvable</string>
    <string name="exception_default">Une erreur est survenue</string>
    <string name="iso">ISO :</string>
    <string name="labelCountGroupSequence">Nombre de groupe de séquences :</string>
    <string name="pelliculeName">Nom de la pellicule</string>
    <string name="newPelliculeLabel">Créer un type de pellicule</string>
    <string name="nameGroupeSequence">Nom du Groupe de Séquences</string>
    <string name="aucune_pellicule">Aucune pellicule trouvée</string>
    <string name="aucun_grp_sequence">Aucun groupe séquence trouvé</string>
    <string name="annuler">Annuler</string>
    <string name="creer">Créer</string>
    <string name="add_pellicule_title">Créer une pellicule</string>
    <string name="add_pellicule_name">Nom de la pellicule</string>
    <string name="nouveau_groupe">Créer un nouveau groupe</string>
    <string name="add_groupe_title">Créer une pellicule</string>
    <string name="groupe_name_hint">Nom du groupe</string>
    <string name="add_appareil_hint">Ajouter un appareil</string>
    <string name="aucune_sequence">Aucune séquence trouvée</string>
    <string name="nouvelle_sequence">Créer une nouvelle séquence</string>
    <string name="aucune_photo">Aucune photo trouvée</string>
    <string name="nouvelle_photo">Prendre une nouvelle photo</string>
    <string name="enregistrer_photo">Enregistrer ma photo</string>
    <string name="no_objectif">Aucun objectif</string>
    <string name="modifier">Modifier</string>
    <string name="default_ouverture">F5.6</string>
    <string name="default_exposition">1/125</string>
    <string name="default_mode">Scène Portrait</string>
    <string name="modifyAddLabel">Modifier</string>
    <string name="ajouter_une_pellicule">Ajouter une pellicule</string>
</resources>
